<resources>
    <string name="app_name">Sprout Leaks</string>
    <string name="sprout">Sprout</string>
    <string name="habit_reform_and_routine_management">Habit Reform Monitoring Tool</string>
    <string name="lets_do_it">Lets do it!</string>
    <string name="eula"><b><u>END USER LICENSE AGREEMENT</u></b></string>
    <string name="sampleText"><b>Lorem ipsum dolor sit amet</b> \n\n\nConsectetur adipiscing elit. Donec rhoncus rutrum interdum. Mauris pharetra dolor ut ultrices sollicitudin. Morbi pharetra, ante ut ullamcorper consequat, erat nisi feugiat justo, id ultrices purus quam non felis. Pellentesque non ligula vel arcu faucibus volutpat et in metus. Vestibulum sit amet pretium tortor. Nullam tristique aliquam massa, vel porttitor mi egestas vel. Nullam sit amet purus massa. Pellentesque semper nisl a sapien finibus, at viverra tellus commodo. Donec congue nec lacus a fermentum. Nam elit sem, scelerisque vel leo luctus, porta finibus dui. Curabitur sit amet massa ac velit imperdiet pharetra eget et lorem. Maecenas eget odio elementum, egestas dui eleifend, interdum metus. Sed quis quam quis massa accumsan efficitur sit amet ut odio. Morbi tellus mauris, interdum rutrum eleifend at, molestie tristique massa. Suspendisse dictum nisl sed tortor mattis, a pharetra mi hendrerit. Mauris rutrum ac mauris nec luctus. Quisque at mollis turpis, nec auctor nibh. Vivamus eros sapien, interdum sed lorem eget, congue sagittis libero. Aenean congue dolor sed turpis imperdiet, ac volutpat ex fermentum. Nulla scelerisque lectus at quam blandit, in eleifend lorem rhoncus. Nulla pharetra fringilla pretium. Nam eu placerat nunc. Nam euismod velit non tincidunt faucibus. Nulla condimentum libero ligula, ut feugiat erat ultricies a. Phasellus commodo sed sapien nec elementum. Proin bibendum felis eget nisi maximus, sit amet placerat arcu venenatis. Etiam a iaculis metus. Quisque vestibulum odio purus, eu ultricies quam finibus quis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur quis dui mauris. Quisque lacus dolor, vestibulum vestibulum feugiat sit amet, venenatis nec metus. Sed ornare dignissim magna, id consequat risus eleifend pulvinar. Aliquam a ornare purus, vel tempor lectus. Etiam sodales tempus consectetur. Mauris nisi nunc, ullamcorper a elit quis, dignissim maximus dolor. In venenatis sit amet leo sed aliquet. Aliquam erat volutpat. Nam at ultrices lacus. Vestibulum in sapien non nulla egestas eleifend. Donec ornare in dolor eu eleifend. Nulla maximus fringilla leo et gravida. Integer commodo placerat neque, vitae accumsan justo finibus id. Praesent commodo varius est ut iaculis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean sed dapibus orci. Mauris at libero mauris. Praesent ut sollicitudin libero, eu fermentum mi. Donec tortor nisi, viverra eu interdum tristique, posuere et enim. Ut consectetur, libero et finibus facilisis, diam tortor luctus metus, sed scelerisque nisl odio eu justo. Curabitur nec venenatis nisl, at ornare nisi. Suspendisse dolor sapien, malesuada sed erat quis, volutpat dignissim nisl. Duis iaculis nisl purus, sed pulvinar risus maximus malesuada. Nam iaculis dui id urna feugiat accumsan. Sed ac erat libero. Morbi varius facilisis magna, sit amet feugiat erat posuere ut. Sed condimentum massa vel iaculis placerat. Aliquam at libero et tellus tincidunt venenatis. Curabitur quis lectus et ex vulputate ornare. Morbi posuere mi aliquam, fermentum tortor id, ornare diam. Suspendisse placerat massa fermentum, rhoncus nibh quis, sollicitudin metus. Vivamus vitae libero diam. Aliquam nunc sapien, iaculis non ipsum eget, ornare porta lectus. Donec ultrices, sem a laoreet ultricies, justo ligula sollicitudin justo, et placerat elit ipsum eget ligula. Pellentesque accumsan ullamcorper ipsum eget pretium. Donec vel ipsum lobortis, cursus enim eget, lacinia diam. In vehicula consectetur felis quis tristique. Nam non interdum arcu. Curabitur malesuada vehicula mauris, quis condimentum sem laoreet ac. Nam pretium velit et ipsum dignissim sollicitudin. Fusce rhoncus dolor quis dui cursus pulvinar. Proin volutpat diam justo, nec tincidunt mauris scelerisque a. Maecenas at pretium massa. Nulla dapibus, ante sed pharetra finibus, nulla nisl ullamcorper lectus, quis euismod ipsum ipsum a nulla. Etiam laoreet elit at volutpat imperdiet. Fusce consectetur lacus non quam iaculis, suscipit lobortis orci porta. Praesent sed nunc eget felis imperdiet cursus. Nam convallis tincidunt nisi, ac varius diam blandit sit amet. In accumsan nec ipsum in vehicula. Donec nisi nulla, lacinia nec lorem in, convallis dictum nisl. In feugiat imperdiet est, et sodales dui accumsan non.</string>
    <string name="application_logo">application_logo</string>
    <string name="disagree">D I S A G R E E</string>
    <string name="agree">A G R E E</string>
    <string name="textView_startup_introduction">Start growing your sprout.\nReform the poor habit and become a better version of you!</string>
    <string name="continue_lbl">C O N T I N U E</string>
    <string name="lbl_getCommonWakeUpTime">What time do you usually wake up?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ask_commonSleepTime">What time do you usually sleep?</string>
    <string name="break_your_bad_habits_in_no_of_days">Break your bad habit in 21 of days</string>
    <string name="qoute">Give up bad habit that affect your well-being and health and become a better version of yourself using the guided routines methods.</string>
    <string name="greetingsvg">GreetingSVG</string>
    <string name="my_firstname_is">My Firstname is....</string>
    <string name="what_should_we_call_you">What should we call you?</string>
    <string name="prompt_name">Enter your name</string>
    <string name="personalization">Personalization</string>
    <string name="select">Select Item</string>
    <string name="get_started">GET STARTED</string>
    <string name="motivation">You have the control to the power to transform your life for the best.\n\nAre you prepared to the path of fixing bad habit?</string>
    <string name="welcome_msg">Start Your Journey</string>
    <string name="lbl_how_do_you_identity">How do you Identify?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="non_binary">Non-Binary</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="home">Home</string>
    <string name="subroutine">Subroutine</string>
    <string name="analytics">Analytics</string>
    <string name="journal">Journal</string>
    <string name="settings">Settings</string>
    <string name="overview_01">\t\tThis EULA agreement is a binding agreement, entered into by and between Sprout Technology, registered address, (\"Sprout Technology\") and you, and is made effective as of the date you download, install or use the Application Sprout (\"Application\") or from the date of your electronic acceptance.</string>
    <string name="overview_02">\t\tThis EULA agreement sets forth the general terms and conditions of your use of the Application, provides a license to use Sprout Technology Application and contains liability disclaimers. This EULA agreement’s terms also apply to any Application update, upgrade, internet-based service, and support service for the Application. EULA agreement signifies that you have read, understand, acknowledge, and agree to be bound by this EULA agreement.</string>
    <string name="overview_03">\t\tThe terms \"we\", \"us\" or \"our\" shall refer to Sprout Technology. The terms \"you\", \"your\", or \"User\" shall refer to any individual or entity who accepts this EULA agreement, uses our Application, or has access to our Application. Sprout Technology may, in its sole and absolute discretion, change or modify this Agreement, and any policies or agreements which are incorporated herein, at any time, and such changes or modifications shall be effective immediately upon posting. Your use of this Application after such changes or modifications have been made shall constitute your acceptance of this EULA agreement as last revised.</string>
    <string name="overview_04">\t\tBY DOWNLOADING, INSTALLING, USING THE APPLICATION YOU ACKNOWLEDGE THAT YOU HAVE READ AND UNDERSTAND THIS AGREEMENT. IF YOU DO NOT AGREE TO BE BOUND BY THIS EULA AGREEMENT AS LAST REVISED, DO NOT DOWNLOAD, INSTALL, USE (OR CONTINUE TO USE) OUR APPLICATION.</string>
    <string name="eligibility_01">\t\tOur Application is available only to Users who can form legally binding contracts under the applicable law. By downloading or using this Application, you represent and warrant that you are (i) at least eighteen (18) years of age, (ii) otherwise recognized as being able to form legally binding contracts under applicable law, and (iii) are not a person barred from donwloading and using the Application e under the laws of the Philippines or other applicable jurisdiction. If, after your electronic acceptance of this Agreement, Sprout Technology finds that you do not have the legal authority to bind such a corporate entity, you will be personally responsible for the obligations contained in this EULA agreement.</string>
    <string name="license_grant_01">\t\tSubject to the terms of this EULA Agreement Sprout Technology hereby grants you a personal, revocable, worldwide, non-exclusive, non-sublicensable, and non-transferable license to use the Sprout Technology Application on your own, non-commercial use devices in accordance with the terms of this EULA agreement. The Application is being licensed to you and you hereby acknowledge that no title or ownership of the Application is being transferred or assigned to you and this EULA agreement is not to be construed as a sale of any rights of the Application.</string>
    <string name="license_grant_02">\t\t\You are permitted to load the Sprout Technology Application (for example on a mobile, tablet or laptop) under your control. You are responsible for ensuring your device meets the minimum requirements of the Sprout Technology Application.</string>
    <string name="restriction_01">\t\tWithout first obtaining the express written consent of Sprout Technology, you may not assign your rights and obligations under this EULA agreement, or redistribute, encumber, sell, rent, lease, sublicense or in other way transfer your rights to the Application.</string>
    <string name="restriction_02">You are not permitted to:</string>
    <string name="restriction_03">●\t\tedit, modify, alter, adapt, or otherwise change the whole or any part of the Sprout Technology Application nor permit the whole or any part of the Application to be combined with or become incorporated in any other Application or any software, nor decompile, disassemble or reverse engineer the Application or attempt to do any of the listed actions,</string>
    <string name="restriction_04">●\t\tcopy, reproduce, duplicate, resell or distribute in any medium any part of the Application, except where expressly authorized by Sprout Technology,</string>
    <string name="restriction_05">●\t\tremove or alter Sprout Technology trademarks or logos or legal notices included in the Application or related assets,</string>
</resources>