<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <TextView
        android:id="@+id/titleHeader1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sprout"
        android:textColor="#0D0D0D"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/titleSubHeader1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleHeader1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:text="@string/habit_reform_and_routine_management"
        android:textAlignment="viewStart"
        android:textColor="#0D0D0D"
        android:textSize="16sp" />

    <ScrollView
        android:id="@+id/Eula_Scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_Disagree"
        android:layout_below="@id/titleSubHeader1"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/Eula_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp"
            android:paddingBottom="5dp"
            android:text="@string/sampleText"
            android:textColor="#000000"
            android:textSize="16sp" />

    </ScrollView>

    <Button
        android:id="@+id/btn_Agree"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/btn_Disagree"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="#7289da"
        android:text="@string/agree"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_Disagree"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="5dp"
        android:background="#FA403D"
        android:text="@string/disagree"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

</RelativeLayout>