<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.onboarding.initialFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/simple_background_tempv1"
        android:padding="@dimen/relativeLayoutPadding">

        <ImageView
            android:id="@+id/sproutLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_above="@id/appName"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/application_logo"
            app:srcCompat="@drawable/sprout_logo"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sprout"
            android:textAlignment="center"
            android:textColor="#0D0D0D"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/startup_initial_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/appName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:text="@string/habit_reform_and_routine_management"
            android:textAlignment="center"
            android:textColor="#0D0D0D" />

        <Button
            android:id="@+id/btn_letsDoIt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/agreement"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_blue_btn"
            android:text="@string/lets_do_it"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/agreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/eula_and_privacy_policy"
            android:textAlignment="center"
            android:textColor="#0D0D0D" />

    </RelativeLayout>

</FrameLayout>