<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_introduction_portrait"
    android:padding="10dp"
    tools:context=".ui.onBoarding.IntroductionFragment">

    <TextView
        android:id="@+id/lbl_titleMainHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/sprout"
        android:textAlignment="center"
        android:textColor="@color/NIGHT"
        android:textSize="@dimen/sp34"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_startup_introduction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_continue"
        android:layout_below="@id/lbl_titleMainHeader"
        android:gravity="center"
        android:justificationMode="inter_word"
        android:padding="10dp"
        android:text="@string/textView_startup_introduction"
        android:textAlignment="center"
        android:textColor="@color/NIGHT"
        android:textSize="@dimen/sp20"
        android:textStyle="normal" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_btn_normal_selector_waikawa_grey"
        android:text="@string/continue_lbl"
        android:textColor="@color/NIGHT" />
</RelativeLayout>