<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.userOnBoarding.getStartedFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_wavy_2"
        android:orientation="vertical"
        android:weightSum="7">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <TextView
                style="@style/textViewHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/relativeLayoutPadding"
                android:text="@string/sprout"
                android:textAlignment="center"
                android:textColor="@color/CLOUDS" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="@drawable/shape_top_rounded_corners_kimberly">

            <TextView
                android:id="@+id/lbl_welcome_msg"
                style="@style/textViewHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="40dp"
                android:text="@string/welcome_msg"
                android:textAlignment="center"
                android:textColor="@color/CLOUDS"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/lbl_name"
                style="@style/textViewHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lbl_welcome_msg"
                android:textAlignment="center"
                android:textColor="@color/CLOUDS"
                android:textSize="22sp"
                android:textStyle="normal"
                tools:text="@tools:sample/full_names" />

            <TextView
                android:id="@+id/textSubHeader"
                style="@style/textViewSubHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lbl_name"
                android:layout_marginTop="@dimen/relativeLayoutPadding"
                android:layout_marginBottom="0dp"
                android:justificationMode="inter_word"
                android:padding="30dp"
                android:text="@string/motivation"
                android:textAlignment="center"
                android:textColor="@color/CLOUDS"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_continue"
                style="@style/btn_continue_portrait"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/relativeLayoutPadding"
                android:layout_marginRight="@dimen/relativeLayoutPadding"
                android:layout_marginBottom="@dimen/relativeLayoutPadding"
                android:background="@drawable/shape_rounded_cloud_btn"
                android:text="@string/get_started"
                android:textColor="@color/NIGHT" />
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>